# tonic

./: Cargo.toml
tonic/: Cargo.toml
tonic-benches/: Cargo.toml  build.rs
tonic-benches/benches/: request_response.rs  request_response_diverse_types.rs  serialization.rs
tonic/src/codec/: encode.rs  mod.rs
