[package]
name = "tonic-benches"
version = "0.1.0"
authors = ["John Douglas <blittable.bits@gmail.com>"]
edition = "2018"


#bin for debug - not required for benches 
#OUT_DIR must be set
#[[bin]]
#name = "build_protos"
#path = "build_protos.rs"
#harness= false

[[bench]]
name = "serialization"
path = "benches/serialization.rs"
harness= false 

[dependencies]
tonic = { path = "../tonic", features = ["rustls"] }
tonic-build = { path = "../tonic-build" }
bytes = "0.4"
prost = "0.5"
rand = "0.7.2"

[dev-dependencies]
criterion = "0.3.0"

[build-dependencies]
tonic = { path = "../tonic", features = ["rustls"] }
tonic-build = { path = "../tonic-build" }
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"

[profile.release]
debug = true